# stromx

./: .gitignore  CMakeLists.txt  Doxyfile.in  Findstromx.cmake.in  README.markdown  about.html  contact.html  develop.html  download.html  gallery.html  homepage.txt  index.html  more.html  screenshots.html  slideshow.html  stack.xcf  story.html  stream.kdev4  strom.kdev4  stromx.kdev4  stromxConfig.cmake.in
base/: AdjustRgbChannels.cpp  AdjustRgbChannels.h  Base.cpp  Base.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraBuffer.cpp  CameraBuffer.h  Clip.cpp  Clip.h  Config.h.in  ConstImage.cpp  ConstImage.h  ConvertPixelType.cpp  ConvertPixelType.h  Counter.cpp  Counter.h  Image.cpp  Image.h  PeriodicDelay.cpp  PeriodicDelay.h  Queue.cpp  Queue.h  TimePeriod.cpp  TimePeriod.h  Trigger.cpp  Trigger.h  Utilities.cpp  Utilities.h  base.dox
base/impl/: CameraBuffer.cpp  CameraBuffer.h
base/test/: AdjustRgbChannelsTest.cpp  AdjustRgbChannelsTest.h  BaseTest.cpp  BaseTest.h  CMakeLists.txt  CameraBufferTest.cpp  CameraBufferTest.h  CameraTest.cpp  CameraTest.h  ClipTest.cpp  ClipTest.h  ConstImageTest.cpp  ConstImageTest.h  ConvertPixelTypeTest.cpp  ConvertPixelTypeTest.h  CounterTest.cpp  CounterTest.h  ImageTest.cpp  ImageTest.h  PeriodicDelayTest.cpp  PeriodicDelayTest.h  QueueTest.cpp  QueueTest.h  TimePeriodTest.cpp  TimePeriodTest.h  TriggerTest.cpp  TriggerTest.h  main.cpp
example/: CMakeLists.txt  file.cpp  file.dox  file.xml  operator.cpp  operator.dot  operator.dox  operator.xml  simple.cpp  simple.dot  simple.dox  simple_stream.cpp
example/camera/: CMakeLists.txt  camera.cpp  camera.dot  camera.dox  camera.xml
example/file/: CMakeLists.txt  file.cpp  file.dox  file.xml
example/math/: Add.cpp  Add.h  AddAndMultiply.cpp  AddAndMultiply.h
example/operator/: CMakeLists.txt  operator.cpp  operator.dot  operator.dox  operator.xml
example/simple/: CMakeLists.txt  simple.cpp  simple.dot  simple.dox
integration/: CMakeLists.txt  IntegrationTest.cpp  calibration.stromx  camera.stromx
python/: CMakeLists.txt
python/example/: CMakeLists.txt  camera.py  camera.xml  file.py  file.xml  observer.py  simple.py
python/stromx/: CMakeLists.txt  __init__.py  __init__.py.in
python/test/: CMakeLists.txt  data_cast.py  exceptions.py  factory.py  observer.py  providers.py  tribool.py
stream/: AbstractNumericParameter.h  CMakeLists.txt  Config.h.in  Data.cpp  Data.h  DataContainer.cpp  DataContainer.h  DataContainerImpl.cpp  DataContainerImpl.h  DataManager.h  DataOwner.h  DataProvider.h  DataType.cpp  DataType.h  DataVariant.cpp  DataVariant.h  Description.h  Descriptor.h  Enum.cpp  Enum.h  EnumParameter.cpp  EnumParameter.h  Exception.h  Factory.cpp  Factory.h  Id2DataComposite.cpp  Id2DataComposite.h  Id2DataMap.cpp  Id2DataMap.h  Id2DataMapper.cpp  Id2DataMapper.h  Id2DataPair.cpp  Id2DataPair.h  Image.cpp  Image.h  ImageWrapper.cpp  ImageWrapper.h  InputNode.cpp  InputNode.h  Network.cpp  (+58 more)
stream/impl/: DataContainerImpl.cpp  DataContainerImpl.h  Id2DataMap.cpp  Id2DataMap.h  InputNode.cpp  InputNode.h  Network.cpp  Network.h  OutputNode.cpp  OutputNode.h  ReadAccessImpl.cpp  ReadAccessImpl.h  RecycleAccessImpl.cpp  RecycleAccessImpl.h  SynchronizedOperatorKernel.cpp  SynchronizedOperatorKernel.h  ThreadImpl.cpp  ThreadImpl.h  WriteAccessImpl.cpp  WriteAccessImpl.h  XmlReaderImpl.cpp  XmlReaderImpl.h  XmlUtilities.cpp  XmlUtilities.h  XmlWriterImpl.cpp  XmlWriterImpl.h
stream/op/: Clip.cpp  Clip.h
stream/test/: CMakeLists.txt  DataContainerTest.cpp  DataContainerTest.h  DataTest.cpp  DataTest.h  DataTypeTest.cpp  DataTypeTest.h  DataVariantTest.cpp  DataVariantTest.h  FactoryTest.cpp  FactoryTest.h  Id2DataCompositeTest.cpp  Id2DataCompositeTest.h  Id2DataPairTest.cpp  Id2DataPairTest.h  InputNodeTest.cpp  InputNodeTest.h  NetworkTest.cpp  NetworkTest.h  OperatorFactoryTest.cpp  OperatorFactoryTest.h  OperatorTest.cpp  OperatorTest.h  OperatorWrapperTest.cpp  OperatorWrapperTest.h  OutputNodeTest.cpp  OutputNodeTest.h  PrimitiveTest.cpp  PrimitiveTest.h  ReadAccessTest.cpp  ReadAccessTest.h  RecycleAccessTest.cpp  RecycleAccessTest.h  StreamTest.cpp  StreamTest.h  SynchronizedOperatorKernelTest.cpp  SynchronizedOperatorKernelTest.h  TestData.cpp  TestData.h  TestOperator.cpp  (+18 more)
strom/test/: CMakeLists.txt  DataContainerTest.cpp  DataContainerTest.h  DataTest.cpp  DataTest.h  DataVariantTest.cpp  DataVariantTest.h  FactoryTest.cpp  FactoryTest.h  Id2DataCompositeTest.cpp  Id2DataCompositeTest.h  Id2DataPairTest.cpp  Id2DataPairTest.h  InputNodeTest.cpp  InputNodeTest.h  NetworkTest.cpp  NetworkTest.h  OperatorTest.cpp  OperatorTest.h  OutputNodeTest.cpp  OutputNodeTest.h  PrimitiveTest.cpp  PrimitiveTest.h  ReadAccessTest.cpp  ReadAccessTest.h  RecycleAccessTest.cpp  RecycleAccessTest.h  StreamTest.cpp  StreamTest.h  StromTest.cpp  StromTest.h  TestData.cpp  TestData.h  TestOperator.cpp  TestOperator.h  ThreadImplTest.cpp  ThreadImplTest.h  ThreadTest.cpp  ThreadTest.h  TryTest.cpp  (+11 more)
stromx/: CMakeLists.txt  stromx.dox
stromx/base/: AdjustRgbChannels.cpp  AdjustRgbChannels.h  Base.cpp  Base.h  Blur.cpp  Blur.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Canny.cpp  Canny.h  Clip.cpp  Clip.h  Close.cpp  Close.h  Config.h.in  ConstImage.cpp  ConstImage.h  ConvertPixelType.cpp  ConvertPixelType.h  Counter.cpp  Counter.h  Dilate.cpp  Dilate.h  Erode.cpp  Erode.h  HoughLines.cpp  HoughLines.h  HoughLinesP.cpp  HoughLinesP.h  Image.cpp  Image.h  ImageFilter.cpp  ImageFilter.h  Matrix.cpp  Matrix.h  MorphologicalFilter.cpp  MorphologicalFilter.h  (+13 more)
stromx/core/: Add.cpp  Add.h  CMakeLists.txt  Config.h.in  Connector.cpp  Connector.h  ConnectorObserver.h  ConstDataRef.cpp  ConstDataRef.h  Core.cpp  Core.h  Counter.cpp  Counter.h  Data.cpp  Data.h  DataContainer.cpp  DataContainer.h  DataInterface.h  DataProvider.h  DataRef.cpp  DataRef.h  DataVariant.cpp  DataVariant.h  Description.h  DirectoryFileInput.cpp  DirectoryFileInput.h  DirectoryFileOutput.cpp  DirectoryFileOutput.h  Documentation.cpp  Documentation.h  Dump.cpp  Dump.h  Enum.cpp  Enum.h  EnumParameter.h  (+86 more)
(+2712 files in other folders)
